--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,1 @@
-# .env.example
-
-# This file documents the environment variables needed for the Taro project.
-
-# API URL for the application
-API_URL=https://api.example.com
-
-# Database connection URL
-DATABASE_URL=mysql://user:password@localhost:3306/database
-
-# Secret key for JWT
-JWT_SECRET=your_jwt_secret_here
-
-# Port for the application to run on
-PORT=3000
+VITE_APP_NAME=Tarô Teleprompter
