--- a/package.json
+++ b/package.json
@@ -1,1 +1,26 @@
-{\n  \"name\": \"taro\",\n  \"version\": \"1.0.0\",\n  \"scripts\": {\n    \"dev\": \"vite\",\n    \"build\": \"vite build\",\n    \"serve\": \"vite preview\"\n  },\n  \"dependencies\": {\n    \"react\": \"latest\",\n    \"react-dom\": \"latest\",\n    \"@tensorflow/tfjs\": \"latest\"\n  },\n  \"devDependencies\": {\n    \"vite\": \"latest\",\n    \"typescript\": \"latest\",\n    \"@vitejs/plugin-vue\": \"latest\"\n  },\n  \"pwa\": {\n    \"registerType\": \"autoUpdate\",\n    \"workboxOptions\": {\n      \"clientsClaim\": true,\n      \"skipWaiting\": true\n    }\n  }\n}
+{
+  "name": "taro-teleprompter",
+  "private": true,
+  "version": "0.0.1",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "jszip": "^3.10.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.11",
+    "vite-plugin-pwa": "^0.21.1"
+  }
+}
