feat: update app title and improve card capture orientation

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tarô Teleprompter",
+  "name": "Leituras de Tarot",
   "short_name": "Tarô",
   "description": "Leitura de tarô com reconhecimento de cartas por câmera",
   "start_url": "/",
