feat(supabase): harden metadata sync and model rollout readiness

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 VITE_APP_NAME=Tarô Teleprompter
+VITE_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_your_public_key
+VITE_SUPABASE_BUCKET=taro-captures
+VITE_SUPABASE_FOLDER_PREFIX=raw-captures
+VITE_SUPABASE_METADATA_TABLE=taro_metadata
