--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview",
     "bootstrap:assets-model": "node scripts/bootstrap-assets-and-model.mjs",
     "bootstrap:icons": "node scripts/generate-pwa-icons.mjs",
+    "model:verify": "node scripts/verify-model-readiness.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -19,6 +20,7 @@
     "check": "npm run typecheck && npm run lint && npm run test"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.96.0",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
     "heic2any": "^0.0.4",
@@ -27,8 +29,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.56.1",
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "^1.56.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^5.1.4",
